--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
+@import url("https://fonts.googleapis.com/css2?family=Grand+Hotel&display=swap");
+
+a {
+  color: black !important;
+}
+#toast-container {
+  top: 30px !important;
+  right: 20px !important;
+  left: auto;
+}
+.material-icons:hover {
+  cursor: pointer;
+}
+
+.brand-logo,
+h2 {
+  font-family: "Grand Hotel", cursive;
+}
+.mycard {
+  margin-top: 30px;
+}
+.auth-card {
+  padding: 20px;
   text-align: center;
+  max-width: 400px;
+  margin: 10px auto;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.gallery {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.item {
+  width: 30%;
 }
 
-.App-link {
-  color: #61dafb;
+.home-card {
+  max-width: 500px;
+  height: max-content;
+  margin: 20px auto;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.mypost {
+  margin: 10px auto;
+  padding: 20px;
+  textalign: center;
 }
